--- a/public/styles.css
+++ b/public/styles.css
@@ -398,6 +398,9 @@ body {
   font-weight: 600;
   font-size: 0.9rem;
   margin-top: auto;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* About Section */
