--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ body {
   width: 100%;
   max-width: 1200px;
   height: 100%;
-  background: url("../images/hero-bg.jpg") center/cover;
+  background: url("images/hero-bg.jpg") center/cover;
   z-index: -1;
 }
 
